--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-import": "^1.13.3",
+    "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
