--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,5 +31,5 @@ jobs:
        accessKeyId: ${{ secrets.ACCESSKEYID }}
        accessKeySecret: ${{ secrets.ACCESSKEYSECRET }}
        bucket: hackweek-2
-       endpoint: hackweek-2.oss-cn-beijing.aliyuncs.com
+       endpoint: oss-cn-beijing.aliyuncs.com
        skipSetting: true
